--- a/00/ex01/Makefile
+++ b/00/ex01/Makefile
@@ -16,7 +16,7 @@ RM		=	rm -rf
 
 # Dir and file names
 NAME	=	phonebook
-SRCS	=	./src/main.cpp
+SRCS	=	./src/main.cpp ./src/Contact.cpp
 BIN_DIR =	./bin
 OBJS	=	$(addprefix $(BIN_DIR)/, $(notdir $(SRCS:.cpp=.o)))
 INC		=	$(wildcard /includes/*.hpp)
