--- a/00/ex02/Makefile
+++ b/00/ex02/Makefile
@@ -15,8 +15,8 @@ CFLAGS	=	-Wall -Werror -Wextra -std=c++98
 RM		=	rm -rf
 
 # Dir and file names
-NAME	=	phonebook
-SRCS	=	./src/main.cpp
+NAME	=	account
+SRCS	=	./src/tests.cpp ./src/Account.cpp
 BIN_DIR =	./bin
 OBJS	=	$(addprefix $(BIN_DIR)/, $(notdir $(SRCS:.cpp=.o)))
 INC		=	$(wildcard /includes/*.hpp)
