update all files

--- a/04/ex00/Makefile
+++ b/04/ex00/Makefile
@@ -16,7 +16,7 @@ RM		=	rm -rf
 
 # Dir and file names
 NAME	=	Animals
-SRCS	=	./src/main.cpp ./src/Animal.cpp ./src/Cat.cpp ./src/Dog.cpp
+SRCS	=	./src/main.cpp ./src/Animal.cpp ./src/Cat.cpp ./src/Dog.cpp ./src/WrongAnimal.cpp ./src/WrongCat.cpp 
 BIN_DIR =	./bin
 OBJS	=	$(addprefix $(BIN_DIR)/, $(notdir $(SRCS:.cpp=.o)))
 INC		=	$(wildcard /includes/*.hpp)
