add modified files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,7 +48,6 @@
 		"sstream": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
-		"typeinfo": "cpp",
-		"*.tpp": "cpp"
+		"typeinfo": "cpp"
 	}
 }
