--- a/08/ex01/Makefile
+++ b/08/ex01/Makefile
@@ -15,8 +15,8 @@ CFLAGS	=	-Wall -Werror -Wextra -std=c++98
 RM		=	rm -rf
 
 # Dir and file names
-NAME	=	Arrays
-SRCS	=	./src/main.cpp
+NAME	=	Span
+SRCS	=	./src/main.cpp ./Span.cpp
 BIN_DIR =	./bin
 OBJS	=	$(addprefix $(BIN_DIR)/, $(notdir $(SRCS:.cpp=.o)))
 
